# ether

./: .gitignore  CMakeLists.txt  README.md
dev/: build.sh
examples/: calculate_pi.eth  echo_server.eth  hello_world.eth  prime_numbers.eth
src/: main.cpp
src/common/: debug.hpp  defer.hpp  error.hpp  iter.hpp
src/driver/: driver_utils.cpp  driver_utils.hpp
src/ir/: dependency_tracker.hpp  disassembler.cpp  disassembler.hpp  ir.cpp  ir.hpp  ir_gen.cpp  ir_gen.hpp  ir_gen_helpers.cpp  ir_gen_lvalue.cpp  ir_gen_visit.cpp
src/lexer/: lexer.cpp  lexer.hpp  token.hpp
src/lsp/: node_finder.cpp  node_finder.hpp  protocol.cpp  protocol.hpp  semantic_tokens.cpp  semantic_tokens.hpp  server.cpp  server.hpp
src/parser/: ast.hpp  parser.cpp  parser.hpp
src/sema/: analyzer.cpp  analyzer.hpp
src/test_runner/: test_runner.cpp  test_runner.hpp
src/vm/: vm.cpp  vm.hpp  vm_syscalls.cpp
std/: io.eth
test/: async.eth  await.eth  await_nested.eth  coroutine.eth  coroutine_await.eth  coroutine_await_nested.eth  down_decl.eth  error_mismatch_generic.eth  fibonachi.eth  generic_syntax.eth  globals.eth  hello.eth  memory.eth  mul_table.eth  opt_dead_code.eth  opt_spawn_reachable.eth  opt_transitive.eth  patch_decl.eth  sleep.eth  structs_basic.eth  structs_heap.eth  structs_nested.eth  structs_nested_heap.eth  test.eth  test_runner.cpp  variadic.eth
test/dump-ir/: arithmetic_ops.eth  array_return_heap.eth  array_return_stack.eth  array_struct.eth  comparison_ops.eth  control_flow.eth  coroutine.eth  float_basic.eth  function_calls.eth  globals.eth  integer_types.eth  (+13 more)
(+60 files in other folders)
